refactor: 자바 11로 변경에 따른 리팩토링