@@ -2,6 +2,7 @@ package menu.util;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StringParser {
 
@@ -19,6 +20,6 @@ public class StringParser {
 
     public static List<String> parseToTokens(final String value, final String delimiter) {
         return Arrays.stream(value.split(delimiter, SPLIT_LIMIT))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
